--- a/pattern/balanced-ecs-on-ec2-container-deployment-across-az/files/spot-cluster.yml
+++ b/pattern/balanced-ecs-on-ec2-container-deployment-across-az/files/spot-cluster.yml
@@ -1,25 +1,18 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: ECS Cluster optimized for machine learning inference workloads
+Description: ECS cluster that has EC2 Spot capacity to host the containers
 Parameters:
-  InstanceType:
-    Type: String
-    Default: inf2.8xlarge
-    Description: Class of AWS Inferentia instance used to run containers.
-    AllowedValues: [inf1.xlarge, inf1.2xlarge, inf1.6xlarge, inf1.24xlarge,
-      inf2.xlarge, inf2.8xlarge, inf2.24xlarge, inf2.48xlarge]
-    ConstraintDescription: Please choose a valid instance type.
   DesiredCapacity:
     Type: Number
-    Default: '0'
-    Description: Number of instances to initially launch in your ECS cluster.
+    Default: 0
+    Description: Number of EC2 instances to launch in your ECS cluster.
   MaxSize:
     Type: Number
-    Default: '2'
-    Description: Maximum number of instances that can be launched in your ECS cluster.
+    Default: 100
+    Description: Maximum number of EC2 instances that can be launched in your ECS cluster.
   ECSAMI:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Default: /aws/service/ecs/optimized-ami/amazon-linux-2/inf/recommended/image_id
-    Description: The Amazon Machine Image ID used for the cluster, leave it as the default value to get the latest Inferentia optimized AMI
+    Default: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
+    Description: The Amazon Machine Image ID used for the cluster, leave it as the default value to get the latest AMI
   VpcId:
     Type: AWS::EC2::VPC::Id
     Description: VPC ID where the ECS cluster is launched
@@ -43,37 +36,12 @@ Resources:
         - Name: containerInsights
           Value: enabled
 
-  # Autoscaling group. This launches the actual EC2 instances that will register
-  # themselves as members of the cluster, and run the docker containers.
-  ECSAutoScalingGroup:
-    Type: AWS::AutoScaling::AutoScalingGroup
-    DependsOn:
-      # This is to ensure that the ASG gets deleted first before these
-      # resources, when it comes to stack teardown.
-      - ECSCluster
-      - EC2Role
-    Properties:
-      VPCZoneIdentifier:
-        - !Select [ 0, !Ref SubnetIds ]
-        - !Select [ 1, !Ref SubnetIds ]
-      LaunchTemplate:
-        LaunchTemplateId: !Ref ContainerInstances
-        Version: !GetAtt ContainerInstances.LatestVersionNumber
-      MinSize: 0
-      MaxSize: !Ref MaxSize
-      DesiredCapacity: !Ref DesiredCapacity
-      NewInstancesProtectedFromScaleIn: true
-    UpdatePolicy:
-      AutoScalingReplacingUpdate:
-        WillReplace: 'true'
-
-  # The config for each instance that is added to the cluster
+  # The config for each EC2 instance that is added to the cluster
   ContainerInstances:
     Type: AWS::EC2::LaunchTemplate
     Properties:
       LaunchTemplateData:
         ImageId: !Ref ECSAMI
-        InstanceType: !Ref InstanceType
         IamInstanceProfile:
           Name: !Ref EC2InstanceProfile
         SecurityGroupIds:
@@ -83,7 +51,9 @@ Resources:
           # knows which ECS cluster on your AWS account it should be joining
           Fn::Base64: !Sub |
             #!/bin/bash
-            echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
+            echo "ECS_CLUSTER=${ECSCluster}" >> /etc/ecs/ecs.config
+            echo "ECS_ENABLE_SPOT_INSTANCE_DRAINING=true" >> /etc/ecs/ecs.config
+            echo "ECS_CONTAINER_STOP_TIMEOUT=90s" >> /etc/ecs/ecs.config
         BlockDeviceMappings:
           - DeviceName: "/dev/xvda"
             Ebs:
@@ -99,6 +69,51 @@ Resources:
       Path: /
       Roles:
         - !Ref EC2Role
+
+  # Autoscaling group. This launches the actual EC2 instances that will register
+  # themselves as members of the cluster, and run the docker containers.
+  ECSAutoScalingGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    UpdatePolicy:
+      AutoScalingReplacingUpdate:
+        WillReplace: 'true'
+    Properties:
+      VPCZoneIdentifier:
+        - !Select [ 0, !Ref SubnetIds ]
+        - !Select [ 1, !Ref SubnetIds ]
+      MinSize: 0
+      MaxSize: !Ref MaxSize
+      DesiredCapacity: !Ref DesiredCapacity
+      NewInstancesProtectedFromScaleIn: true
+
+      # This policy sets up rules which allow the ASG to launch
+      # a variety of mixed spot instance types
+      MixedInstancesPolicy:
+        # Request no on demand, only spot instances
+        InstancesDistribution:
+          OnDemandBaseCapacity: 0
+          OnDemandPercentageAboveBaseCapacity: 0
+          SpotAllocationStrategy: capacity-optimized
+        # Rules about what type of instances to launch
+        LaunchTemplate:
+          LaunchTemplateSpecification:
+            LaunchTemplateId: !Ref ContainerInstances
+            Version: !GetAtt ContainerInstances.LatestVersionNumber
+          Overrides:
+            - InstanceRequirements:
+                VCpuCount:
+                  Min: 2
+                  Max: 4
+                MemoryMiB:
+                  Min: 4096
+                  Max: 8192
+                BurstablePerformance: "excluded"
+                InstanceGenerations:
+                  - "current"
+                CpuManufacturers:
+                  - "intel"
+                  - "amd"
+                ExcludedInstanceTypes: ["t2*","r*","d*","g*","i*","z*","x*"]
 
   # Custom resource that force destroys the ASG. This cleans up EC2 instances that had
   # managed termination protection enabled, but which are not yet released.
@@ -191,7 +206,7 @@ Resources:
           Status: ENABLED
           # Percentage of cluster reservation to try to maintain
           TargetCapacity: 100
-        ManagedTerminationProtection: ENABLED
+        ../srcion: ENABLED
         ManagedDraining: ENABLED
 
   # Create a cluster capacity provider assocation so that the cluster
