ENI trunking custom resource

--- a/pattern/ecs-ec2-bottlerocket-cluster/files/cluster.yml
+++ b/pattern/ecs-ec2-bottlerocket-cluster/files/cluster.yml
@@ -112,6 +112,7 @@ Resources:
           # Percentage of cluster reservation to try to maintain
           TargetCapacity: 100
         ManagedTerminationProtection: ENABLED
+        ManagedDraining: ENABLED
 
   # Create a cluster capacity provider assocation so that the cluster
   # will use the capacity provider
