--- a/pattern/balanced-ecs-on-ec2-container-deployment-across-az/files/cluster.yml
+++ b/pattern/balanced-ecs-on-ec2-container-deployment-across-az/files/cluster.yml
@@ -25,18 +25,8 @@ Parameters:
   VpcId:
     Type: AWS::EC2::VPC::Id
     Description: VPC ID where the ECS cluster is launched
-  SubnetIds:
-    Type: List<AWS::EC2::Subnet::Id>
-    Description: List of subnet IDs where the EC2 instances will be launched
 
 Resources:
-  # This is authorizes ECS to manage resources on your
-  # account on your behalf. This role is likely already created on your account
-  # ECSRole:
-  #  Type: AWS::IAM::ServiceLinkedRole
-  #  Properties:
-  #    AWSServiceName: 'ecs.amazonaws.com'
-
   # ECS Resources
   ECSCluster:
     Type: AWS::ECS::Cluster
@@ -44,61 +34,6 @@ Resources:
       ClusterSettings:
         - Name: containerInsights
           Value: enabled
-
-  # Autoscaling group. This launches the actual EC2 instances that will register
-  # themselves as members of the cluster, and run the docker containers.
-  ECSAutoScalingGroup:
-    Type: AWS::AutoScaling::AutoScalingGroup
-    DependsOn:
-      # This is to ensure that the ASG gets deleted first before these
-      # resources, when it comes to stack teardown.
-      - ECSCluster
-      - EC2Role
-    Properties:
-      VPCZoneIdentifier: !Ref SubnetIds
-      LaunchTemplate:
-        LaunchTemplateId: !Ref ContainerInstances
-        Version: !GetAtt ContainerInstances.LatestVersionNumber
-      MinSize: 0
-      MaxSize: !Ref MaxSize
-      DesiredCapacity: !Ref DesiredCapacity
-      NewInstancesProtectedFromScaleIn: true
-    UpdatePolicy:
-      AutoScalingReplacingUpdate:
-        WillReplace: 'true'
-
-  # The config for each instance that is added to the cluster
-  ContainerInstances:
-    Type: AWS::EC2::LaunchTemplate
-    Properties:
-      LaunchTemplateData:
-        ImageId: !Ref ECSAMI
-        InstanceType: !Ref InstanceType
-        IamInstanceProfile:
-          Name: !Ref EC2InstanceProfile
-        SecurityGroupIds:
-          - !Ref ContainerHostSecurityGroup
-        UserData:
-          # This injected configuration file is how the EC2 instance
-          # knows which ECS cluster on your AWS account it should be joining
-          Fn::Base64: !Sub |
-            #!/bin/bash
-            echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
-        BlockDeviceMappings:
-          - DeviceName: "/dev/xvda"
-            Ebs:
-              VolumeSize: 50
-              VolumeType: gp3
-        # Disable IMDSv1, and require IMDSv2
-        MetadataOptions:
-          HttpEndpoint: enabled
-          HttpTokens: required
-  EC2InstanceProfile:
-    Type: AWS::IAM::InstanceProfile
-    Properties:
-      Path: /
-      Roles:
-        - !Ref EC2Role
 
   # Custom resource that force destroys the ASG. This cleans up EC2 instances that had
   # managed termination protection enabled, but which are not yet released.
@@ -116,9 +51,8 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code:
-        ZipFile: !Sub |
+        ZipFile: |
           const { AutoScalingClient, DeleteAutoScalingGroupCommand } = require("@aws-sdk/client-auto-scaling");
-          const autoscaling = new AutoScalingClient({ region: '${AWS::Region}' });
           const response = require('cfn-response');
 
           exports.handler = async function(event, context) {
@@ -129,8 +63,10 @@ Resources:
               return;
             }
 
+            const autoscaling = new AutoScalingClient({ region: event.ResourceProperties.Region });
+
             const input = {
-              AutoScalingGroupName: '${ECSAutoScalingGroup}',
+              AutoScalingGroupName: event.ResourceProperties.AutoScalingGroupName,
               ForceDelete: true
             };
             const command = new DeleteAutoScalingGroupCommand(input);
@@ -144,7 +80,10 @@ Resources:
       Timeout: 30
       Role: !GetAtt CustomAsgDestroyerRole.Arn
 
-  # The role used by the ASG destroyer
+  # The role used by the ASG destroyer. Note that this role
+  # starts out with no permissions to actually delete any ASG's. The stack that
+  # creates the ASG also adds permissions to this role to allow the role to
+  # delete the ASG
   CustomAsgDestroyerRole:
     Type: AWS::IAM::Role
     Properties:
@@ -160,52 +99,108 @@ Resources:
       ManagedPolicyArns:
         # https://docs.aws.amazon.com/aws-managed-policy/latest/reference/AWSLambdaBasicExecutionRole.html
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-      Policies:
-        - PolicyName: allow-to-delete-autoscaling-group
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action: autoscaling:DeleteAutoScalingGroup
-                Resource: !Sub arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${ECSAutoScalingGroup}
 
-  CustomAsgDestroyer:
-    Type: Custom::AsgDestroyer
+  # Turn on ENI trunking for the EC2 instances. This setting is not on by default,
+  # but it is highly important for increasing the density of AWS VPC networking mode
+  # tasks per instance. Additionally, it is not controllable by default in CloudFormation
+  # because it has some complexity of needing to be turned on by a bearer of the role
+  # of the EC2 instances themselves. With this custom function we can assume the EC2 role
+  # then use that role to call the ecs:PutAccountSetting API in order to enable
+  # ENI trunking
+  CustomEniTrunkingFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Code:
+        ZipFile: !Sub |
+          const { ECSClient, PutAccountSettingCommand } = require("@aws-sdk/client-ecs");
+          const { STSClient, AssumeRoleCommand } = require("@aws-sdk/client-sts");
+
+          const response = require('cfn-response');
+
+          exports.handler = async function(event, context) {
+            console.log(event);
+
+            if (event.RequestType == "Delete") {
+              await response.send(event, context, response.SUCCESS);
+              return;
+            }
+
+            const sts = new STSClient({ region: event.ResourceProperties.Region });
+
+            const assumeRoleResponse = await sts.send(new AssumeRoleCommand({
+              RoleArn: event.ResourceProperties.EC2Role,
+              RoleSessionName: "eni-trunking-enable-session",
+              DurationSeconds: 900
+            }));
+
+            // Instantiate an ECS client using the credentials of the EC2 role
+            const ecs = new ECSClient({
+              region: event.ResourceProperties.Region,
+              credentials: {
+                accessKeyId: assumeRoleResponse.Credentials.AccessKeyId,
+                secretAccessKey: assumeRoleResponse.Credentials.SecretAccessKey,
+                sessionToken: assumeRoleResponse.Credentials.SessionToken
+              }
+            });
+
+            const putAccountResponse = await ecs.send(new PutAccountSettingCommand({
+              name: 'awsvpcTrunking',
+              value: 'enabled'
+            }));
+            console.log(putAccountResponse);
+
+            await response.send(event, context, response.SUCCESS);
+          };
+      Handler: index.handler
+      Runtime: nodejs20.x
+      Timeout: 30
+      Role: !GetAtt CustomEniTrunkingRole.Arn
+
+  # The role used by the ENI trunking custom resource
+  CustomEniTrunkingRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      ManagedPolicyArns:
+        # https://docs.aws.amazon.com/aws-managed-policy/latest/reference/AWSLambdaBasicExecutionRole.html
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+
+  # This allows the custom CloudFormation resource in Lambda
+  # to assume the role that is used by the EC2 instances. The Lambda function must
+  # assume this role because the ecs:PutAccountSetting must be called either
+  # by the role that the setting is for, or by the root account, and we aren't
+  # using the root account for CloudFormation.
+  AllowEniTrunkingRoleToAssumeEc2Role:
+    Type: AWS::IAM::Policy
+    Properties:
+      Roles:
+        - !Ref CustomEniTrunkingRole
+      PolicyName: allow-to-assume-ec2-role
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Action: sts:AssumeRole
+            Resource: !GetAtt EC2Role.Arn
+
+  # This is the actual custom resource, which triggers the invocation
+  # of the Lambda function that enabled ENI trunking during the stack deploy
+  CustomEniTrunking:
+    Type: Custom::CustomEniTrunking
     DependsOn:
-      - CapacityProviderAssociation
+      - AllowEniTrunkingRoleToAssumeEc2Role
     Properties:
-      ServiceToken: !GetAtt CustomAsgDestroyerFunction.Arn
+      ServiceToken: !GetAtt CustomEniTrunkingFunction.Arn
       Region: !Ref "AWS::Region"
-
-  # Create an ECS capacity provider to attach the ASG to the ECS cluster
-  # so that it autoscales as we launch more containers
-  CapacityProvider:
-    Type: AWS::ECS::CapacityProvider
-    Properties:
-      AutoScalingGroupProvider:
-        AutoScalingGroupArn: !Ref ECSAutoScalingGroup
-        ManagedScaling:
-          InstanceWarmupPeriod: 60
-          MinimumScalingStepSize: 1
-          MaximumScalingStepSize: 100
-          Status: ENABLED
-          # Percentage of cluster reservation to try to maintain
-          TargetCapacity: 100
-        ion: ENABLED
-        ManagedDraining: ENABLED
-
-  # Create a cluster capacity provider assocation so that the cluster
-  # will use the capacity provider
-  CapacityProviderAssociation:
-    Type: AWS::ECS::ClusterCapacityProviderAssociations
-    Properties:
-      CapacityProviders:
-        - !Ref CapacityProvider
-      Cluster: !Ref ECSCluster
-      DefaultCapacityProviderStrategy:
-        - Base: 0
-          CapacityProvider: !Ref CapacityProvider
-          Weight: 1
+      EC2Role: !GetAtt EC2Role.Arn
 
   # A security group for the EC2 hosts that will run the containers.
   # This can be used to limit incoming traffic to or outgoing traffic
@@ -222,19 +217,37 @@ Resources:
   EC2Role:
     Type: AWS::IAM::Role
     Properties:
+      Path: /
       AssumeRolePolicyDocument:
         Statement:
+          # Allow the EC2 instances to assume this role
           - Effect: Allow
             Principal:
               Service: [ec2.amazonaws.com]
             Action: ['sts:AssumeRole']
-      Path: /
+          # Allow the ENI trunking function to assume this role in order to enable
+          # ENI trunking while operating under the identity of this role
+          - Effect: Allow
+            Principal:
+              AWS: !GetAtt CustomEniTrunkingRole.Arn
+            Action: ['sts:AssumeRole']
 
       # See reference: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/security-iam-awsmanpol.html#security-iam-awsmanpol-AmazonEC2ContainerServiceforEC2Role
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
 
-  # This is a role which is used within Fargate to allow the Fargate agent
+      # The ENI trunking function will assume this role and then use
+      # the ecs:PutAccountSetting to set ENI trunking on for this role
+      Policies:
+        - PolicyName: allow-to-modify-ecs-settings
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action: ecs:PutAccountSetting
+                Resource: '*'
+
+  # This is a role which is used by the ECS agent
   # to download images, and upload logs.
   ECSTaskExecutionRole:
     Type: AWS::IAM::Role
@@ -264,10 +277,15 @@ Outputs:
   ECSTaskExecutionRole:
     Description: The role used to start up a task
     Value: !Ref ECSTaskExecutionRole
-  CapacityProvider:
-    Description: The cluster capacity provider that the service should use
-                 to request capacity when it wants to start up a task
-    Value: !Ref CapacityProvider
   ContainerHostSecurityGroup:
     Description: The security group of the host EC2 instances
     Value: !Ref ContainerHostSecurityGroup
+  EC2Role:
+    Description: The role used by EC2 instances in the cluster
+    Value: !Ref EC2Role
+  CustomAsgDestroyerFunctionArn:
+    Description: The Lambda function that assists with cleaning up capacity provider ASG's
+    Value: !GetAtt CustomAsgDestroyerFunction.Arn
+  CustomAsgDestroyerFunctionRole:
+    Description: The Lambda function's role, used for adding policies to allow deleting an ASG
+    Value: !Ref CustomAsgDestroyerRole
