Add opomer as author
Signed-off-by: Olly Pomeroy <opomer@amazon.co.uk>

--- a/data/authors.yml
+++ b/data/authors.yml
@@ -70,3 +70,11 @@
       uri: https://mike.fiedler.me/
     - type: github
       uri: https://github.com/miketheman
+
+- id: opomer
+  name: Olly Pomeroy
+  title: Senior Developer Advocate at AWS
+  image: /pattern/images/authors/opomer.jpg
+  links:
+    - type: github
+      uri: https://github.com/ollypom
