--- a/pattern/ecs-ec2-capacity-provider-scaling/files/cluster-capacity-provider.yml
+++ b/pattern/ecs-ec2-capacity-provider-scaling/files/cluster-capacity-provider.yml
@@ -127,7 +127,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code:
-        ZipFile: !Sub |
+        ZipFile: |
           const { ECSClient, PutAccountSettingCommand } = require("@aws-sdk/client-ecs");
           const { STSClient, AssumeRoleCommand } = require("@aws-sdk/client-sts");
 
