--- a/data/authors.yml
+++ b/data/authors.yml
@@ -70,3 +70,21 @@
       uri: https://mike.fiedler.me/
     - type: github
       uri: https://github.com/miketheman
+
+- id: opomer
+  name: Olly Pomeroy
+  title: Senior Developer Advocate at AWS
+  image: /pattern/images/authors/opomer.jpg
+  links:
+    - type: github
+      uri: https://github.com/ollypom
+
+- id: cssntan
+  name: Henrique Santana
+  title: Senior Cloud Support Engineer at AWS
+  image: /pattern/images/authors/cssntan.jpg
+  links:
+    - type: github
+      uri: https://github.com/henriquesantanati
+    - type: linkedin
+      uri: https://www.linkedin.com/in/henriquessantana/
