--- a/pattern/ecs-ec2-capacity-provider-scaling/files/cluster-capacity-provider.yml
+++ b/pattern/ecs-ec2-capacity-provider-scaling/files/cluster-capacity-provider.yml
@@ -30,12 +30,6 @@ Parameters:
     Description: List of subnet IDs where the EC2 instances will be launched
 
 Resources:
-  # This is authorizes ECS to manage resources on your
-  # account on your behalf. This role is likely already created on your account
-  # ECSRole:
-  #  Type: AWS::IAM::ServiceLinkedRole
-  #  Properties:
-  #    AWSServiceName: 'ecs.amazonaws.com'
 
   # ECS Resources
   ECSCluster:
@@ -61,9 +55,8 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code:
-        ZipFile: !Sub |
+        ZipFile: |
           const { AutoScalingClient, DeleteAutoScalingGroupCommand } = require("@aws-sdk/client-auto-scaling");
-          const autoscaling = new AutoScalingClient({ region: '${AWS::Region}' });
           const response = require('cfn-response');
 
           exports.handler = async function(event, context) {
@@ -74,8 +67,10 @@ Resources:
               return;
             }
 
+            const autoscaling = new AutoScalingClient({ region: event.ResourceProperties.Region });
+
             const input = {
-              AutoScalingGroupName: '${ECSAutoScalingGroup}',
+              AutoScalingGroupName: event.ResourceProperties.AutoScalingGroupName,
               ForceDelete: true
             };
             const command = new DeleteAutoScalingGroupCommand(input);
@@ -116,11 +111,110 @@ Resources:
 
   CustomAsgDestroyer:
     Type: Custom::AsgDestroyer
-    DependsOn:
-      - CapacityProviderAssociation
     Properties:
       ServiceToken: !GetAtt CustomAsgDestroyerFunction.Arn
       Region: !Ref "AWS::Region"
+      AutoScalingGroupName: !Ref ECSAutoScalingGroup
+
+  # Turn on ENI trunking for the EC2 instances. This setting is not on by default,
+  # but it is highly important for increasing the density of AWS VPC networking mode
+  # tasks per instance. Additionally, it is not controllable by default in CloudFormation
+  # because it has some complexity of needing to be turned on by a bearer of the role
+  # of the EC2 instances themselves. With this custom function we can assume the EC2 role
+  # then use that role to call the ecs:PutAccountSetting API in order to enable
+  # ENI trunking
+  CustomEniTrunkingFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Code:
+        ZipFile: |
+          const { ECSClient, PutAccountSettingCommand } = require("@aws-sdk/client-ecs");
+          const { STSClient, AssumeRoleCommand } = require("@aws-sdk/client-sts");
+
+          const response = require('cfn-response');
+
+          exports.handler = async function(event, context) {
+            console.log(event);
+
+            if (event.RequestType == "Delete") {
+              await response.send(event, context, response.SUCCESS);
+              return;
+            }
+
+            const sts = new STSClient({ region: event.ResourceProperties.Region });
+
+            const assumeRoleResponse = await sts.send(new AssumeRoleCommand({
+              RoleArn: event.ResourceProperties.EC2Role,
+              RoleSessionName: "eni-trunking-enable-session",
+              DurationSeconds: 900
+            }));
+
+            // Instantiate an ECS client using the credentials of the EC2 role
+            const ecs = new ECSClient({
+              region: event.ResourceProperties.Region,
+              credentials: {
+                accessKeyId: assumeRoleResponse.Credentials.AccessKeyId,
+                secretAccessKey: assumeRoleResponse.Credentials.SecretAccessKey,
+                sessionToken: assumeRoleResponse.Credentials.SessionToken
+              }
+            });
+
+            const putAccountResponse = await ecs.send(new PutAccountSettingCommand({
+              name: 'awsvpcTrunking',
+              value: 'enabled'
+            }));
+            console.log(putAccountResponse);
+
+            await response.send(event, context, response.SUCCESS);
+          };
+      Handler: index.handler
+      Runtime: nodejs20.x
+      Timeout: 30
+      Role: !GetAtt CustomEniTrunkingRole.Arn
+
+  # The role used by the ENI trunking custom resource
+  CustomEniTrunkingRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      ManagedPolicyArns:
+        # https://docs.aws.amazon.com/aws-managed-policy/latest/reference/AWSLambdaBasicExecutionRole.html
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+
+  # This allows the custom CloudFormation resource in Lambda
+  # to assume the role that is used by the EC2 instances. The Lambda function must
+  # assume this role because the ecs:PutAccountSetting must be called either
+  # by the role that the setting is for, or by the root account, and we aren't
+  # using the root account for CloudFormation.
+  AllowEniTrunkingRoleToAssumeEc2Role:
+    Type: AWS::IAM::Policy
+    Properties:
+      Roles:
+        - !Ref CustomEniTrunkingRole
+      PolicyName: allow-to-assume-ec2-role
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Action: sts:AssumeRole
+            Resource: !GetAtt EC2Role.Arn
+
+  # This is the actual custom resource, which triggers the invocation
+  # of the Lambda function that enabled ENI trunking during the stack deploy
+  CustomEniTrunking:
+    Type: Custom::CustomEniTrunking
+    Properties:
+      ServiceToken: !GetAtt CustomEniTrunkingFunction.Arn
+      Region: !Ref "AWS::Region"
+      EC2Role: !GetAtt EC2Role.Arn
 
   # Autoscaling group. This launches the actual EC2 instances that will register
   # themselves as members of the cluster, and run the docker containers.
@@ -132,9 +226,7 @@ Resources:
       - ECSCluster
       - EC2Role
     Properties:
-      VPCZoneIdentifier:
-        - !Select [ 0, !Ref SubnetIds ]
-        - !Select [ 1, !Ref SubnetIds ]
+      VPCZoneIdentifier: !Ref SubnetIds
       LaunchTemplate:
         LaunchTemplateId: !Ref ContainerInstances
         Version: !GetAtt ContainerInstances.LatestVersionNumber
@@ -194,11 +286,15 @@ Resources:
           # Percentage of cluster reservation to try to maintain
           TargetCapacity: 100
         ManagedTerminationProtection: ENABLED
+        ManagedDraining: ENABLED
 
   # Create a cluster capacity provider assocation so that the cluster
   # will use the capacity provider
   CapacityProviderAssociation:
     Type: AWS::ECS::ClusterCapacityProviderAssociations
+    DependsOn:
+      - CustomEniTrunking
+      - CustomAsgDestroyer
     Properties:
       CapacityProviders:
         - !Ref CapacityProvider
@@ -225,15 +321,34 @@ Resources:
     Properties:
       AssumeRolePolicyDocument:
         Statement:
+          # Allow the EC2 instances to assume this role
           - Effect: Allow
             Principal:
               Service: [ec2.amazonaws.com]
+            Action: ['sts:AssumeRole']
+          # Allow the ENI trunking function to assume this role in order to enable
+          # ENI trunking while operating under the identity of this role
+          - Effect: Allow
+            Principal:
+              AWS: !GetAtt CustomEniTrunkingRole.Arn
             Action: ['sts:AssumeRole']
       Path: /
 
       # See reference: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/security-iam-awsmanpol.html#security-iam-awsmanpol-AmazonEC2ContainerServiceforEC2Role
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
+
+      # The ENI trunking function will assume this role and then use
+      # the ecs:PutAccountSetting to set ENI trunking on for this role
+      Policies:
+        - PolicyName: allow-to-modify-ecs-settings
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action: ecs:PutAccountSetting
+                Resource: '*'
+
 
   # This is a role which is used within Fargate to allow the Fargate agent
   # to download images, and upload logs.
